
- Tests use now plone.app.testing; test coverage improved. [hvelarde]

- Fix package distribution. [hvelarde]

- Do not create a `keywords` Document in the plone-site in case the ``keywords.txt``
  file is empty. (useful for sites not having Document globally allowed)
  [fRiSi]

- Allow `Site Administrators` too access the keyword managment
  [fRiSi]
  
1.9 (2011-06-22)
----------------

- Fixed critical error at index update.
  [thomasdesvenain]

- Upgrade imports for Zope 2.13. Remove deprecation warnings.
  [toutpt]

1.8 (2011-04-08)
----------------

- Add tests related to skins-directories. [WouterVH]

- remove old-style Install.py. [WouterVH]

- Add uninstall-profile. [WouterVH]

- Fix marker-file for setuphandlers.py. [WouterVH]

- Add MANIFEST.in to include docs in release. [WouterVH]

- Upgrade imports for Zope 2.13. Remove deprecation warnings.
  [thomasdesvenain]

- Manage python-Levenshtein dependency as a setuptools extras_require.
  [thomasdesvenain]

- French translation.
  [thomasdesvenain]

- Internationalization fixes.
  [thomasdesvenain]

- Added the z3c.autoinclude entry point so this package is automatically loaded
  on Plone 3.3 and above. [WouterVH]

- Remove the old-style refresh.txt and version.txt. Version is now specified in
  setup.py [WouterVH]

- Cleanup install-instructions. [WouterVH]


1.7 (20/08/2010)
----------------

- Added ability to mix unicode and non-unicode keywords and changes.
  Fixes a bug with collective.dancing (and plone.z3cform) upgrading
  form inputs to unicode automagically.
  [dunlapm]

- Restify the CHANGES.txt file.
  [toutpt]

- Add keywords import through genericsetup.
  [toutpt]

- Add a default profile based on Extensions/Install.py.
  [toutpt]

- remove zope2 interface.
  [toutpt]


1.6 (19/03/2009)
----------------

- Fixed handling of non-ASCII Keywords in Controller Python Scripts
  prefs_keywords_action_change.cpy and prefs_keywords_action_delete.cpy [disko]
